force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Customer_Material__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Customer_Material__c</fullName>
    <label>Customer Material</label>
    <length>50</length>
    <type>Text</type>
</CustomField>