force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_ItemCost__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ItemCost__c</fullName>
    <label>ItemCost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>