force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_ItemFreight__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ItemFreight__c</fullName>
    <label>ItemFreight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>