force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Line_Item_Description__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Line_Item_Description__c</fullName>
    <label>Line Item Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>