force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_List_Price__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_List_Price__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>