force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Plant__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Plant__c</fullName>
    <label>Plant</label>
    <length>10</length>
    <type>Text</type>
</CustomField>