force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_PricebookEntryId__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_PricebookEntryId__c</fullName>
    <label>PricebookEntryId</label>
    <length>250</length>
    <type>Text</type>
</CustomField>