force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Quantity__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>