force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_SalesDocumentItem__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_SalesDocumentItem__c</fullName>
    <label>SalesDocument Item</label>
    <length>250</length>
    <type>Text</type>
</CustomField>