force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_ServiceDate__c</fullName>
    <label>GYNCF Date</label>
    <type>Date</type>
</CustomField>