force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Storage_Location__c</fullName>
    <label>Storage Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>