force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_Subtotal__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_Subtotal__c</fullName>
    <label>Subtotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>