force-app/main/default/objects/GYNCO_Quote_Line_Item__c/fields/GYNCF_UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>GYNCF_UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <length>10</length>
    <type>Text</type>
</CustomField>